[gd_scene load_steps=4 format=3 uid="uid://dwhn2o87iljgu"]

[ext_resource type="Script" path="res://src/Scripts/Items/currency_interactable.gd" id="1_ekrjr"]
[ext_resource type="Texture2D" uid="uid://pihe5rdmfcax" path="res://Assets/Coin.png" id="1_t5eqd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48yx2"]
size = Vector2(12, 11)

[node name="CurrencyInteractable" type="Node2D"]
script = ExtResource("1_ekrjr")
min_value = 15
max_value = 25

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_t5eqd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_48yx2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
